--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
       context: .
       dockerfile: .Dockerfile
     volumes:
-      - ./src/:/src
-      - ./public/:/public
+      - ./src/:/app/src
+      - ./public/:/app/public
     environment:
       - BROWSER=none
       - CI=true
