--- a/package.json
+++ b/package.json
@@ -51,6 +51,12 @@
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.5.0",
+    "msw": "^0.47.4",
     "prettier": "^2.7.1"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!(axios)/)"
+    ]
   }
 }
