--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --testPathIgnorePatterns=.*e2e.test.ts",
+    "e2e": "CI=true react-scripts test --testPathPattern=.*e2e.test.ts$ --colors",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -52,7 +53,8 @@
   "devDependencies": {
     "eslint-config-prettier": "^8.5.0",
     "msw": "^0.47.4",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "puppeteer": "^18.1.0"
   },
   "jest": {
     "transformIgnorePatterns": [
