add github pages deploy script

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "youtube-like",
+  "homepage": "http://dpiorun.github.io/youtube-like",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -24,6 +25,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test --testPathIgnorePatterns=.*e2e.test.ts",
     "e2e": "CI=true react-scripts test --testPathPattern=.*e2e.test.ts$ --colors",
     "eject": "react-scripts eject"
@@ -52,6 +55,7 @@
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.5.0",
+    "gh-pages": "^4.0.0",
     "msw": "^0.47.4",
     "prettier": "^2.7.1",
     "puppeteer": "^18.1.0"
